# Rust-Utility-Kit

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: base_converter.rs  file_organizer.rs  mod.rs  password_gen.rs  qr_generator.rs  text_hasher.rs  url_shortener.rs
