[package]
name = "rust-toolbox"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
md5 = "0.7"
blake3 = "1.5"
rand = "0.8"
qrcode = "0.14"
image = "0.25"
colored = "2.1"
base64 = "0.22"
walkdir = "2.5"
dirs = "5.0"
webbrowser = "1.0"
hex = "0.4"
